# libd3dcompiler

./: Cargo.toml  README.md
assets/: unreal-4.27-cross-cook-content-windows-linux.patch
d3dcompiler/: Cargo.toml  cbindgen.toml
d3dcompiler/examples/: compile_shader.rs
d3dcompiler/src/: lib.rs  main.rs
d3dcompiler/src/imports/: advapi32.rs  kernel32.rs  mod.rs  msvcrt.rs  ntdll.rs  printf.rs  rpcrt4.rs
d3dcompiler/tests/: compile_tests.rs
d3dcompiler_proc/: Cargo.toml
d3dcompiler_proc/src/: lib.rs
d3dcrs/: Cargo.toml
d3dcrs/src/: blob.rs  blob_parts.rs  compile.rs  disassemble.rs  error.rs  flags.rs  include.rs  lib.rs  preprocess.rs  strip.rs  target.rs
d3dcrs/src/reflect/: bindings.rs  constant_buffer.rs  mod.rs  signature.rs  types.rs  variable.rs
d3dcrs_cli/: Cargo.toml
d3dcrs_cli/src/: main.rs
